<resources>
    <string name="app_name">Friendly lose weight helper</string>

    <string name="weight_enter">Enter your weight</string>
    <string name="action_settings">Settings</string>
    <string name="weight_units">Kg</string>
    <string name="chart_unit_kg">Weight in Kg</string>
    <string name="undo_last_deletion_button">Undo</string>
    <string name="modify_standard_view_button">Modify mode</string>
    <string name="modify_modification_view_button">Standard mode</string>
    <string name="delete_last_entry_button">Delete</string>
    <string name="date_picker_title">Pick a date</string>
    <string name="time_picker_title">Pick a time</string>
    <string name="auto_checkbox_text">Auto</string>
    <string name="weight_modify">Modify measurement</string>
    <string name="left_Arrow"><![CDATA[<]]></string>
    <string name="right_Arrow"><![CDATA[>]]></string>
    <string name="position_number">Position: %d</string>
    <string name="create_new_user">New user</string>
    <string name="choose_user_text_view">Choose user</string>
    <string name="menu_set_weight_goal">Change Weight Goal</string>
    <string name="menu_switch_user">Switch user</string>
    <string name="menu_delete_all_measurement">Delete all measurement</string>
    <string name="accept_button_ok">OK</string>
    <string name="weight_goal_unit">Kg</string>
    <string name="change_weight_goal_title">Set Goal</string>
    <string name="chart_button">Chart</string>
    <string name="create_new_user_user_name">User Name</string>
    <string name="CreateNewUserTitle">Create New User</string>
    <string name="password_optional_text">Password (optional)</string>
    <string name="weight_goal_optional_text">Weight Goal (optional)</string>
    <string name="back_button">Back</string>
    <string name="textViewPasswordText">Password</string>
    <string name="create_new_user_title">Create new user</string>
    <string name="testDateTime">3:23</string>
    <string name="delete_all_measurement_dialog_title">Are you sure?</string>
    <string name="delete_all_measurement_dialog_message">This operation is permanent.</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">No</string>
    <string name="error_try_insert_duplicated_date">Date is duplicated. Change date</string>
    <string name="error_update_date_or_time_will_be_repeated">Date or time will be repeated. Try change one of them.</string>
    <string name="menu_user_profile_option">Profile option</string>
    <string name="delete_user_account_dialog_title">Delete account</string>
    <string name="delete_user_account_message">All data will be lost. Are you sure?</string>
    <string name="change_user_name_dialog_title">Write new name</string>
    <string name="cancel_button">Cancel</string>
    <string name="toast_info_user_name_change">User name change to %s</string>
    <string name="toast_info_user_email_change">User email change to %s</string>
    <string name="toast_info_user_password_change">Password change</string>
    <string name="toast_info_user_password_disable">Password disable</string>
    <string name="change_user_name_dialog_error_name_already_in_use">Name is in use already</string>
    <string name="new_password_dalog_tittle">Change password</string>
    <string name="user_option_title_textview">User Option</string>
    <string name="user_profile_option_change_user_name_button">Change User name</string>
    <string name="user_profile_option_change_user_email_button">Change email</string>
    <string name="user_profile_option_change_user_password_button">Change password</string>
    <string name="user_profile_option_delete_account_Button">Delete account</string>
    <string name="email_password_recovery">E-mail (password recovery)</string>
    <string name="new_email_dialog_tittle">Change email</string>
    <string name="change_user_email_dialog_error_email_already_in_use">Email is in user already</string>
    <string name="email_error_email_is_not_correct">Email is not correct</string>
    <string name="create_new_user_error_user_already_exisit">User already exist</string>
    <string name="create_new_user_error_user_name_cannot_be_empty">User name cannot be empty</string>
    <string name="password_recovery_text_view">Forget password ?</string>
    <string name="reset_password_dialog_message">On your email will be sent randomly generated password. It\'s strongly advice to change them immediately. Do you really want to reset?</string>
    <string name="reset_password_dialog_tittle">Reset password</string>
    <string name="email_message_content">"Your new password is: %s .We recommend change them immediately."</string>
    <string name="subject_of_email">Friendly lose weight helper Password Reset</string>
    <string name="email_wast_sent_info_toast">Email was sent</string>
    <string name="progress_tittle">Progress</string>
    <string name="progress_user_name">Jacek cygi himent</string>
    <string name="progress_weight_goal">Weight goal: %f kg</string>
    <string name="progress_days_left_to_achieve_goal_label">Days left: %s</string>
    <string name="progress_prediction_date">Prediction date: %s</string>
    <string name="progress_records_button">Records</string>
    <string name="progress_statistics_button">Statistics</string>
    <string name="menu_show_progress">Show progress</string>
    <string name="progress_avg_daily_change_from_begining">Average change daily: %f kg</string>
    <string name="weight_difference_from_begining">Weight difference: %f kg</string>
    <string name="avg_daily_weight_loose_from_highest_weight">Average daily weight loose: %s kg</string>
    <string name="weight_difference_from_highest_weight">Weight difference: %f kg</string>
    <string name="number_of_measurement_made_from_begining">Number of measurement made: %l</string>
    <string name="number_of_measurement_made_from_highest_weight">Number of measurement made: %l</string>
    <string name="progress_from_the_start_section">From The start</string>
    <string name="progress_from_the_highest_weight_section">From The highest weight</string>
    <string name="when_achieve_goal_section">When achieve goal</string>
    <string name="progress_first_weight">First weight: %f kg</string>
    <string name="progress_max_weight">Max weight: %f kg</string>
    <string name="progress_current_weight">Current weight: %f kg</string>
    <string name="congratulations_view_title">Congratulations %s</string>
</resources>
