<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/menu_switch_user"
        android:id="@+id/menu_switch_users"
        android:icon="@android:drawable/ic_menu_more" />
    <item
        android:id="@+id/menu_set_weight_goal"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_set_weight_goal" />
    <item
        android:id="@+id/menu_show_progress"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_show_progress" />
    <item
        android:id= "@+id/menu_user_profile_option"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_user_profile_option" />
    <item
        android:id="@+id/menu_delete_all_measurement"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_delete_all_measurement" />
</menu>