<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weight_enter"
        android:textSize="32dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/inputWeightField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>
        <TextView
            android:text="@string/weight_units"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/acceptButton"
        android:text="@string/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/schowChart_test"
        android:text="Show Chart TEST"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/testDatabaseButton"
        android:text="Test DeleteStatement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/undoLastDeletionButton"
        android:text="@string/undo_last_deletion_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
